crates/wac-parser/tests/resolution/fail/no-ok-result-type.wac
import x: interface {
    f: func() -> result<string>;
};

let i = new foo:bar { x };
